--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
+    "sweetalert2": "^11.22.2",
     "tailwindcss": "^4.1.9"
   },
   "devDependencies": {
