--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
+    "recharts": "^3.1.0",
     "sweetalert2": "^11.22.2",
     "tailwindcss": "^4.1.9"
   },
