--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^7.2.0",
     "@tailwindcss/vite": "^4.1.9",
     "axios": "^1.10.0",
+    "date-fns": "^4.1.0",
     "firebase": "^11.10.0",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
