--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.10.0",
     "date-fns": "^4.1.0",
     "firebase": "^11.10.0",
+    "libphonenumber-js": "^1.12.10",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
